src/objects/Chatty2_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>Chatty2_User__c</fullName>
        <inlineHelpText>The user record enabled as Chatty</inlineHelpText>
        <label>Chatty2 User</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chatty_Admin_ID__c</fullName>
        <inlineHelpText>The ID of the Chatty Admin user for authentication</inlineHelpText>
        <label>Chatty Admin ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chatty_Admin_PW__c</fullName>
        <inlineHelpText>Admin PW for the Chatty authenticator</inlineHelpText>
        <label>Chatty Admin PW</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Chatty2 Settings</label>
</CustomObject>